# OpenToonz_Plugin_ColorTemp

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: main.cpp
